# dotget

./: Cargo.toml  schema.json
src/: config.rs  errors.rs  filter.rs  formatter.rs  main.rs  package_managers.rs
src/commands/: apply.rs  lint.rs
src/package_managers/: pacman.rs
