[package]
name = "dotget"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
clap = { version = "4.5.58", features = ["derive"] }
globset = { version = "0.4.18", features = ["serde"] }
schemars = "1.2.1"
semver = { version = "1.0.27", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml = "0.9.34"
sysinfo = { version = "0.38.1", default-features = false, features = [
    "system",
] }
tokio = { version = "1.49.0", features = ["full"] }
