[package]
name = "dotget"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
clap = { version = "4.5.58", features = ["derive"] }
globset = { version = "0.4.18", features = ["serde"] }
indicatif = { version = "0.18.3", features = ["tokio"] }
miette = "7.6.0"
owo-colors = "4.2.3"
paste = "1.0.15"
schemars = "1.2.1"
semver = { version = "1.0.27", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml = "0.9.34"
sysinfo = { version = "0.38.1", default-features = false, features = [
    "system",
] }
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["full"] }
tracing = "0.1.44"
tracing-indicatif = "0.3.14"
tracing-subscriber = { version = "0.3.22", features = [
    "chrono",
    "json",
    "env-filter",
    "local-time",
    "serde",
    "serde_json",
    "time",
] }

[target.'cfg(target_os = "linux")'.dependencies]
alpm = "5.0.2"
